--- a/projeto-manutencao-veiculo/frontend/index-angular.html
+++ b/projeto-manutencao-veiculo/frontend/index-angular.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="controller.js"></script>
 <body>
-    <div ng-app="">
+    <div ng-app="myApp" ng-controller="myCtrl">
         <p>Nome: <input type="text" ng-model="nome" ></p>
-        <p>Sobrenome: <input type="text" ng-model="sobrenome" ></p>
-        <p>Nome completo: {{nome + sobrenome}}</p>
+        <p>Dia: <input type="text" ng-model="dia" ></p>
+        <p>Valor: <input type="text" ng-model="valor" ></p>
+        <button ng-click="salvar()">Salvar</button>
+
+        
+
+        <table border="1">
+            <tr>
+                <th>id</th>
+                <th>nome</th>
+                <th>dia</th>
+                <th>valor</th>
+                <th>ações</th>
+            </tr>
+            <tr ng-repeat="manutencao in manutencoes">
+                <td>{{manutencao.id}}</td>
+                <td>{{manutencao.nome}}</td>
+                <td>{{manutencao.dia}}</td>
+                <td>{{manutencao.valor}}</td>
+                <td>
+                    <button ng-click="getOne(manutencao.id)">getOne</button> 
+                    <button ng-click="put(manutencao.id)">put</button> 
+                    <button ng-click="delete(manutencao.id)">delete</button>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
