--- a/projeto-manutencao-veiculo/backend/src/main/resources/public/app/index.html
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/public/app/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-        <script src="javascript/app.js"></script>
-        <script src="javascript/service.js"></script>
-        <script src="javascript/controller.js"></script>
-        <script src="javascript/config.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <meta charset="UTF-8">
     </head>
 <body>
-    <div class="container" ng-app="myApp" ng-controller="myCtrl">
+    <div class="container" ng-app="myApp" ng-controller="ManutencaoController">
         <div class="content" ng-if="objeto.editando">
             <form class="content border px-4 mt-5" >
                 <h1 class="titulo text-primary text-center mt-4">Manutenção</h1>
@@ -46,7 +41,15 @@
                 </tr>
             </table>
             <button class="btn btn-info " ng-click="new()">new</button>
+            <button class="btn btn-warning " ng-click="logout()">logout</button>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js" integrity="sha512-XXstIIHBPC0Qn/UIcOuyzZxk2h459PLcn+/j+fTFrBzcUpyE5EoQky9m5rnReRyBLW49aK+oDaoQUKgNEaKKJQ==" crossorigin="anonymous"></script>
+    <script src="javascript/app.js"></script>
+    <script src="javascript/login-service.js"></script>
+    <script src="javascript/manutencao-service.js"></script>
+    <script src="javascript/manutencao-controller.js"></script>
+    <script src="javascript/config.js"></script>
 </body>
 </html>
