add mascara de money

--- a/projeto-manutencao-veiculo/backend/src/main/resources/public/app/manutencao.html
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/public/app/manutencao.html
@@ -12,7 +12,7 @@
                 <p class=" d-none">Id: <input class="form-control" type="text" ng-model="objeto.id" readonly ></p>
                 <p>Nome: <input class="form-control" type="text" ng-model="objeto.nome" ></p>
                 <p>Dia: <input class="form-control" type="text" ng-model="objeto.dia" ></p>
-                <p>Valor: <input class="form-control" type="text" ng-model="objeto.valor" ></p>
+                <p>Valor: <input class="form-control" type="text" ng-model="objeto.valor" money-mask money-mask-prepend="R$ "></p>
                 <button class="btn btn-success mb-4" ng-click="save()">save</button>
                 <button class="btn btn-warning mb-4" ng-click="objeto.editando=!objeto.editando">back</button>
                 <button class="btn btn-warning mb-4 d-none" ng-click="preencher()">easter egg</button>
@@ -33,7 +33,7 @@
                     <td>{{manutencao.id}}</td>
                     <td>{{manutencao.nome}}</td>
                     <td>{{manutencao.dia}}</td>
-                    <td>{{manutencao.valor}}</td>
+                    <td>{{manutencao.valor | currency:"R$ "}}</td>
                     <td>
                         <button class="btn btn-success" ng-click="getOne(manutencao.id)">edit</button> 
                         <button class="btn btn-danger" ng-click="delete(manutencao.id)">delete</button>
@@ -51,5 +51,6 @@
     <script src="javascript/manutencao-service.js"></script>
     <script src="javascript/manutencao-controller.js"></script>
     <script src="javascript/config.js"></script>
+    <script src="javascript/rw-money-mask.min.js"></script>
 </body>
 </html>
