--- a/projeto-manutencao-veiculo/backend/src/main/resources/public/app/manutencao.html
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/public/app/manutencao.html
@@ -49,6 +49,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="javascript/bootstrap-datepicker-1.9.0-dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="javascript/bootstrap-datepicker-1.9.0-dist/locales/bootstrap-datepicker.pt-BR.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js" integrity="sha512-XXstIIHBPC0Qn/UIcOuyzZxk2h459PLcn+/j+fTFrBzcUpyE5EoQky9m5rnReRyBLW49aK+oDaoQUKgNEaKKJQ==" crossorigin="anonymous"></script>
     <script src="javascript/app.js"></script>
