correcao do login

--- a/projeto-manutencao-veiculo/backend/src/main/resources/public/app/login.html
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/public/app/login.html
@@ -26,5 +26,6 @@
     <script src="javascript/login-service.js"></script>
     <script src="javascript/login-controller.js"></script>
     <script src="javascript/config.js"></script>
+    <script src="javascript/rw-money-mask.min.js"></script>
 </body>
 </html>
